fixed contact wrap bug

--- a/src/app/components/layouts/page.module.css
+++ b/src/app/components/layouts/page.module.css
@@ -59,4 +59,12 @@
   line-height: 2.5;
   font-weight: 100;
   letter-spacing: 5px;
+  max-width: 100%;
+  overflow-wrap: break-word;
+}
+
+@media (max-width: 500px) {
+  .listValue {
+    font-size: 1rem;
+  }
 }
